fix the spacing on the homepage.

--- a/drupal/sites/all/themes/wise/css/style.css
+++ b/drupal/sites/all/themes/wise/css/style.css
@@ -1131,30 +1131,21 @@ body.front #page-title {
   margin-bottom: 12px;
 }
 
-/* line 37, ../sass/_nodes.scss */
-.view-activity .cell {
-  padding-top: 36px;
-  border-top: 1px solid #ddd;
+/* line 35, ../sass/_nodes.scss */
+body.front .node.view-mode-full {
+  display: none;
 }
-/* line 42, ../sass/_nodes.scss */
-.view-activity .row-first .cell {
-  padding-top: 0;
-  border-top: 0;
-}
-/* line 47, ../sass/_nodes.scss */
-.view-activity .row-last .node {
-  margin-bottom: 0;
-}
-/* line 51, ../sass/_nodes.scss */
+
+/* line 41, ../sass/_nodes.scss */
 .view-activity .row-set {
   margin-bottom: 24px;
 }
-/* line 55, ../sass/_nodes.scss */
+/* line 45, ../sass/_nodes.scss */
 .view-activity .row-set-featured {
   position: relative;
   margin-bottom: 72px;
 }
-/* line 59, ../sass/_nodes.scss */
+/* line 49, ../sass/_nodes.scss */
 .view-activity .row-set-featured:after {
   content: '';
   width: 1px;
@@ -1164,104 +1155,120 @@ body.front #page-title {
   left: 50%;
   background-color: #ddd;
 }
-/* line 70, ../sass/_nodes.scss */
+/* line 59, ../sass/_nodes.scss */
+.view-activity .row-set-featured .cell {
+  padding-top: 36px;
+  border-top: 1px solid #ddd;
+  margin-top: 36px;
+}
+/* line 65, ../sass/_nodes.scss */
+.view-activity .row-set-featured .cell-first {
+  padding-top: 0;
+  border-top: 0;
+  margin-top: 0;
+}
+/* line 71, ../sass/_nodes.scss */
+.view-activity .row-set-featured .node {
+  margin-bottom: 0;
+}
+/* line 76, ../sass/_nodes.scss */
 .view-activity .row-set-other {
   font-size: 0.8em;
 }
-/* line 73, ../sass/_nodes.scss */
+/* line 79, ../sass/_nodes.scss */
 .view-activity .row-set-other h2 {
   margin-top: 0;
 }
-/* line 77, ../sass/_nodes.scss */
+/* line 83, ../sass/_nodes.scss */
 .view-activity .row-set-other .node {
   margin-bottom: 0;
 }
-/* line 83, ../sass/_nodes.scss */
+/* line 89, ../sass/_nodes.scss */
 .view-activity .row-fluid .span6 {
   width: 46.5%;
   margin-left: 7%;
 }
-/* line 88, ../sass/_nodes.scss */
+/* line 94, ../sass/_nodes.scss */
 .view-activity .row-fluid .span6:first-child {
   margin-left: 0;
 }
 
-/* line 93, ../sass/_nodes.scss */
+/* line 99, ../sass/_nodes.scss */
 .node-readmore:after {
   content: ' ...';
 }
 
-/* line 102, ../sass/_nodes.scss */
+/* line 108, ../sass/_nodes.scss */
 .node-service.node-teaser {
   padding: 20px;
   background-color: #ecebe3;
   border-radius: 6px;
 }
-/* line 108, ../sass/_nodes.scss */
+/* line 114, ../sass/_nodes.scss */
 .node-service .audio {
   float: left;
   margin-top: 6px;
 }
-/* line 113, ../sass/_nodes.scss */
+/* line 119, ../sass/_nodes.scss */
 .node-service.has-audio .meta {
   margin-left: 100px;
 }
-/* line 117, ../sass/_nodes.scss */
+/* line 123, ../sass/_nodes.scss */
 .node-service .meta {
   font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: bold;
 }
-/* line 122, ../sass/_nodes.scss */
+/* line 128, ../sass/_nodes.scss */
 .node-service header {
   margin-bottom: 24px;
 }
-/* line 126, ../sass/_nodes.scss */
+/* line 132, ../sass/_nodes.scss */
 .node-service h2 {
   margin: 6px 0;
 }
 
-/* line 131, ../sass/_nodes.scss */
+/* line 137, ../sass/_nodes.scss */
 .field-name-field-service-date {
   color: #494949;
 }
 
-/* line 136, ../sass/_nodes.scss */
+/* line 142, ../sass/_nodes.scss */
 .icon-cloud-download {
   font-size: 22px;
   color: #662664;
 }
-/* line 140, ../sass/_nodes.scss */
+/* line 146, ../sass/_nodes.scss */
 .icon-cloud-download:hover {
   text-decoration: none;
 }
 
-/* line 149, ../sass/_nodes.scss */
+/* line 155, ../sass/_nodes.scss */
 .table-hover tbody tr:hover td .icon-cloud-download,
 .table-hover tbody tr:hover th .icon-cloud-download {
   color: white;
 }
 
-/* line 156, ../sass/_nodes.scss */
+/* line 162, ../sass/_nodes.scss */
 .view-service-list .views-field-title {
   text-transform: uppercase;
   max-width: 360px;
 }
-/* line 161, ../sass/_nodes.scss */
+/* line 167, ../sass/_nodes.scss */
 .view-service-list th.views-field-title {
   text-transform: none;
 }
 
 @media (max-width: 767px) {
-  /* line 173, ../sass/_nodes.scss */
+  /* line 179, ../sass/_nodes.scss */
   .view-activity .cell {
     border-top: 0;
   }
-  /* line 178, ../sass/_nodes.scss */
+  /* line 184, ../sass/_nodes.scss */
   .view-activity .row-fluid .span6 {
     width: 100%;
     margin-left: 0;
   }
-  /* line 183, ../sass/_nodes.scss */
+  /* line 189, ../sass/_nodes.scss */
   .view-activity .row-set-featured:after {
     display: none;
   }
